--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,11 @@
 
 <body>
 
+    <p style="text-align: center;">
+        In the photo finding project I created, I searched using tokens with the fetch API from https://unsplash.com. At
+        the same time, I worked on shaping the photos in my project with CSS.
+    </p>
+
     <div>
         <div class="form-wrapper">
             <form id="form">
